tarpc/tests/compile_fail/tarpc_server_derive_unknown.rs
#[tarpc::service(derive_serde = false, derive = "IDontExist")]
trait World {
    async fn hello(name: String) -> String;
}

fn main() {}
